# usaspending_contract_llm

./: .gitignore  ABANDONED.md  CLAUDE.md  FREEZE_NOTICE.md  FROZEN_WITH_CAVEAT.md  HARD_KILL_FINAL.md  README.md  RECOVERY_PHASE0.md  RESUMABLE.md  pyproject.toml
.claude/: settings.json
analysis/: ccm_baseline_spec.md  paper_outline.md  paper_v1.md  paper_writeup_skeleton.md
audits/: postmortem_template.md  scoop_search_2026-04-27.md  self_audit_day1_2026-04-27.md  self_audit_day2_2026-04-27.md  self_audit_day3_2026-04-27.md  self_audit_day4to7_2026-04-27.md  self_audit_day8_2026-04-27.md  self_audit_recovery_day1_2026-05-04.md
checkpoints/: 2026-04-27.md
dashboard/: app.py
data/: LABELER_GUIDE.md  ccm_replication.json  cohort_heterogeneity.json  cohort_lag_v1.json  commitment_surprise.json  contamination_masking.json  cross_section_quintile.json  day14_mid_checkpoint.json  day9_batch_summary.json  ensemble_kappa_n20.json  manifest_axis_classify.jsonl  manifest_dryrun_n10.json  manifest_global.json  manifest_parse.jsonl  manifest_parse_universe.jsonl  manifest_publish_lag_audit.jsonl  manifest_usaspending_fetch.jsonl  oracle_n20.json  phase0_kill_gate_summary.json  rigor.json  sec_edgar_filings.jsonl  sec_edgar_filings_summary.json  sec_event_panel.json  sec_ticker_cik_map.json  strategic_sample_summary.json  timing_audit.json  universe_defense_it_r1000_fy2024.csv  wrds_coverage_report.json  wrds_event_panel.json  yfinance_car.json  yfinance_earnings.json  yfinance_prices.parquet
tests/: test_cross_section.py  test_manifest.py  test_parse.py  test_resume.py  (+5 more)
(+37 files in other folders)
